<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".activities.MainActivity">

    <ImageView
        android:id="@+id/mainScreenImage"
        android:layout_width="227dp"
        android:layout_height="246dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:adjustViewBounds="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_app_icon_round"
        android:contentDescription="@string/main_activity_start_screen_image" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/main_greeting_1"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@+id/mainScreenImage"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/main_info_1"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="26sp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="9dp" />

    <Button
        android:id="@+id/continueBtn"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="72dp"
        android:background="@color/colorPrimary"
        android:text="@string/tap_to_continue"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>