<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".ViewPacketReplaysActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/view_packet_replays_activity_saved_replays"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/packetReplayListView"
        android:layout_width="470dp"
        android:layout_height="150dp"
        android:layout_marginTop="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/deleteReplayButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="@string/view_packet_replays_activity_delete"
        app:layout_constraintStart_toEndOf="@+id/stopReplayButton"
        app:layout_constraintTop_toTopOf="@+id/stopReplayButton" />

    <Button
        android:id="@+id/sendReplayButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/view_packet_replays_activity_send"
        app:layout_constraintStart_toStartOf="@+id/packetReplayListView"
        app:layout_constraintTop_toBottomOf="@+id/packetReplayListView" />

    <Button
        android:id="@+id/stopReplayButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:backgroundTint="@color/purple_500"
        android:text="@string/view_packet_replays_activity_stop"
        app:layout_constraintStart_toEndOf="@+id/sendReplayButton"
        app:layout_constraintTop_toTopOf="@+id/sendReplayButton" />

    <TextView
        android:id="@+id/replayStatusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="2dp"
        android:text="@string/view_packet_replays_activity_sending_packet"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/packetReplayListView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/deleteReplayButton"
        app:layout_constraintTop_toTopOf="@+id/deleteReplayButton" />

</androidx.constraintlayout.widget.ConstraintLayout>